# modular-chef

./: .railwayignore  README.md  pubspec.yaml
android/app/: build.gradle.kts
assets/data/: modules.json  pairings.json  storage_rules.json  week_templates.json
assets/prompts/: menu_generator.md
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: claude_client.py  config.py  db.py  llm_client.py  main.py
backend/app/models/: __init__.py  base.py  module.py  shopping_list.py  storage_item.py  user.py  user_dish.py  weekly_menu.py
backend/app/routers/: catalog.py  menus.py
backend/app/schemas/: __init__.py  menu.py
backend/app/seed/: seed_modules.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py
backend/tests/: conftest.py  test_claude_client.py  test_llm_client.py  test_models.py  test_routers.py  test_seed.py
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/config/: api_config.dart
lib/models/: module.dart  pairing.dart  storage.dart  storage_rule.dart  week_template.dart  weekly_menu.dart
lib/routing/: app_router.dart  routes.dart
lib/services/: active_menu.dart  catalog_service.dart  http_menu_generator.dart  menu_generator.dart  prompt_builder.dart
lib/shell/: chef_shell.dart  guest_shell.dart  role.dart  role_provider.dart  role_switcher.dart
lib/theme/: app_colors.dart  (+2 more)
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+26 files in other folders)
