[project]
name = "modular-chef-backend"
version = "0.1.0"
description = "Modular Chef — FastAPI backend (PostgreSQL + Claude API)"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
